# data-mining

./: .gitignore  README.md  pyproject.toml  template.py
notebooks/: data_cleaning.ipynb  data_preparation.ipynb  eda.ipynb  feature_importance.csv  feature_selection.ipynb  features_used.json  modeling.ipynb  preprocessing.ipynb
notebooks/data/: features_description.csv
readmission-app/: docker-compose.yml
readmission-app/api/: Dockerfile  app.py  requirements.txt  test.py  utils.py
readmission-app/streamlit-app/: Dockerfile  app.py  requirements.txt
