[project]
name = "data-mining"
version = "0.1.0"
description = ""
authors = [
    {name = "desire SOUSSOU",email = "soussoudesire2019@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "missingno (>=0.5.2,<0.6.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "mlflow (>=2.21.3,<3.0.0)",
    "cloudpickle (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
